--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "[800 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,11 +297,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "#Aplicando el two sample T-test\n",
+    "\n",
+    "#se crean df para tipo dragón y tipo hierba, con sus HP correspondientes:\n",
+    "df_HP_hierba = df[(df[\"Type 1\"] == \"Grass\") & (df[\"Type 2\"].isna())][\"HP\"].reset_index()\n",
+    "df_HP_dragon = df[(df[\"Type 1\"] == \"Dragon\") & (df[\"Type 2\"].isna())][\"HP\"].reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#La hipótesis es:\n",
+    "\n",
+    "#H0: mu_df_HP_dragon = mu_df_HP_hierba\n",
+    "#H1: mu_df_HP_dragon =! mu_df_HP_hierba\n",
+    "\n",
+    "#Si el p-value es menor que el nivel de significancia (α) (usualmente 0.05), puedes rechazar la hipótesis \n",
+    "# nula en favor de la hipótesis alternativa\n",
+    "\n",
+    "#Un p-value alto (mayor que 0.05) indica que no hay suficiente evidencia para rechazar la hipótesis nula.\n",
+    "\n",
+    "\n",
+    "#significance level = 0.05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=-0.43989511897914635, pvalue=0.6646120436214931, df=20.517157083894684)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.ttest_ind(df_HP_dragon[\"HP\"],df_HP_hierba[\"HP\"], equal_var=False,alternative='two-sided')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Dado que el p-value es 0.6646 (mucho mayor que 0.05), no se rechaza la hipótesis nula. \n",
+    "Esto indica que no hay una diferencia estadísticamente significativa entre las medias de los puntos de vida (\"HP\") \n",
+    "de los Pokémon tipo dragón y los tipo hierba\"\"\""
    ]
   },
   {
@@ -313,11 +368,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "#code here\n",
+    "stat_legendary= df[df[\"Legendary\"]==True] \n",
+    "stat_legendary=stat_legendary[['HP','Attack','Defense','Sp. Atk','Sp. Def','Speed']]\n",
+    "\n",
+    "stat_non_legendary= df[df[\"Legendary\"]==False] \n",
+    "stat_non_legendary=stat_non_legendary[['HP','Attack','Defense','Sp. Atk','Sp. Def','Speed']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Planteamiento de hipótesis:\n",
+    "#H0: legendary_stats = non_legendary_stats\n",
+    "#H1: mlegendary_stats != non_legendary_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=array([ 8.86085039, 10.48741303,  7.51912229, 13.40191458,  9.82070237,\n",
+       "       11.41942109]), pvalue=array([2.04623690e-13, 2.51221542e-16, 9.06347875e-11, 2.35464488e-21,\n",
+       "       6.38645008e-15, 1.80081909e-18]), df=array([77.82055957, 74.55197556, 76.09203533, 72.91783207, 71.91420382,\n",
+       "       79.94507308]))"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.ttest_ind(stat_legendary[1:], stat_non_legendary[1:], equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Con los resultados obtenidos, se rechaza la hipótesis nula, por lo que sí se obsevra\n",
+    "una importante diferencia en las estadísticas de los pokemón legendarios y los pokemón no legendarios.\n",
+    "\"\"\""
    ]
   },
   {
@@ -337,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +559,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,22 +589,329 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>dist_escuela</th>\n",
+       "      <th>dist_hosp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-114.31</td>\n",
+       "      <td>34.19</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5612.0</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>1015.0</td>\n",
+       "      <td>472.0</td>\n",
+       "      <td>1.4936</td>\n",
+       "      <td>66900.0</td>\n",
+       "      <td>4.638125</td>\n",
+       "      <td>7.692347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-114.47</td>\n",
+       "      <td>34.40</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>7650.0</td>\n",
+       "      <td>1901.0</td>\n",
+       "      <td>1129.0</td>\n",
+       "      <td>463.0</td>\n",
+       "      <td>1.8200</td>\n",
+       "      <td>80100.0</td>\n",
+       "      <td>4.384165</td>\n",
+       "      <td>7.540617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-114.56</td>\n",
+       "      <td>33.69</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>174.0</td>\n",
+       "      <td>333.0</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>1.6509</td>\n",
+       "      <td>85700.0</td>\n",
+       "      <td>4.773856</td>\n",
+       "      <td>7.446456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-114.57</td>\n",
+       "      <td>33.64</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1501.0</td>\n",
+       "      <td>337.0</td>\n",
+       "      <td>515.0</td>\n",
+       "      <td>226.0</td>\n",
+       "      <td>3.1917</td>\n",
+       "      <td>73400.0</td>\n",
+       "      <td>4.801510</td>\n",
+       "      <td>7.438716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-114.57</td>\n",
+       "      <td>33.57</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1454.0</td>\n",
+       "      <td>326.0</td>\n",
+       "      <td>624.0</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>1.9250</td>\n",
+       "      <td>65500.0</td>\n",
+       "      <td>4.850753</td>\n",
+       "      <td>7.442432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16995</th>\n",
+       "      <td>-124.26</td>\n",
+       "      <td>40.58</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2217.0</td>\n",
+       "      <td>394.0</td>\n",
+       "      <td>907.0</td>\n",
+       "      <td>369.0</td>\n",
+       "      <td>2.3571</td>\n",
+       "      <td>111400.0</td>\n",
+       "      <td>7.211380</td>\n",
+       "      <td>6.957298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16996</th>\n",
+       "      <td>-124.27</td>\n",
+       "      <td>40.69</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>2349.0</td>\n",
+       "      <td>528.0</td>\n",
+       "      <td>1194.0</td>\n",
+       "      <td>465.0</td>\n",
+       "      <td>2.5179</td>\n",
+       "      <td>79000.0</td>\n",
+       "      <td>7.275232</td>\n",
+       "      <td>7.064630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16997</th>\n",
+       "      <td>-124.30</td>\n",
+       "      <td>41.84</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2677.0</td>\n",
+       "      <td>531.0</td>\n",
+       "      <td>1244.0</td>\n",
+       "      <td>456.0</td>\n",
+       "      <td>3.0313</td>\n",
+       "      <td>103600.0</td>\n",
+       "      <td>7.944533</td>\n",
+       "      <td>8.170410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16998</th>\n",
+       "      <td>-124.30</td>\n",
+       "      <td>41.80</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>2672.0</td>\n",
+       "      <td>552.0</td>\n",
+       "      <td>1298.0</td>\n",
+       "      <td>478.0</td>\n",
+       "      <td>1.9797</td>\n",
+       "      <td>85800.0</td>\n",
+       "      <td>7.920227</td>\n",
+       "      <td>8.132035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16999</th>\n",
+       "      <td>-124.35</td>\n",
+       "      <td>40.54</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1820.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>806.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>3.0147</td>\n",
+       "      <td>94600.0</td>\n",
+       "      <td>7.270083</td>\n",
+       "      <td>6.949396</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17000 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0        -114.31     34.19                15.0       5612.0          1283.0   \n",
+       "1        -114.47     34.40                19.0       7650.0          1901.0   \n",
+       "2        -114.56     33.69                17.0        720.0           174.0   \n",
+       "3        -114.57     33.64                14.0       1501.0           337.0   \n",
+       "4        -114.57     33.57                20.0       1454.0           326.0   \n",
+       "...          ...       ...                 ...          ...             ...   \n",
+       "16995    -124.26     40.58                52.0       2217.0           394.0   \n",
+       "16996    -124.27     40.69                36.0       2349.0           528.0   \n",
+       "16997    -124.30     41.84                17.0       2677.0           531.0   \n",
+       "16998    -124.30     41.80                19.0       2672.0           552.0   \n",
+       "16999    -124.35     40.54                52.0       1820.0           300.0   \n",
+       "\n",
+       "       population  households  median_income  median_house_value  \\\n",
+       "0          1015.0       472.0         1.4936             66900.0   \n",
+       "1          1129.0       463.0         1.8200             80100.0   \n",
+       "2           333.0       117.0         1.6509             85700.0   \n",
+       "3           515.0       226.0         3.1917             73400.0   \n",
+       "4           624.0       262.0         1.9250             65500.0   \n",
+       "...           ...         ...            ...                 ...   \n",
+       "16995       907.0       369.0         2.3571            111400.0   \n",
+       "16996      1194.0       465.0         2.5179             79000.0   \n",
+       "16997      1244.0       456.0         3.0313            103600.0   \n",
+       "16998      1298.0       478.0         1.9797             85800.0   \n",
+       "16999       806.0       270.0         3.0147             94600.0   \n",
+       "\n",
+       "       dist_escuela  dist_hosp  \n",
+       "0          4.638125   7.692347  \n",
+       "1          4.384165   7.540617  \n",
+       "2          4.773856   7.446456  \n",
+       "3          4.801510   7.438716  \n",
+       "4          4.850753   7.442432  \n",
+       "...             ...        ...  \n",
+       "16995      7.211380   6.957298  \n",
+       "16996      7.275232   7.064630  \n",
+       "16997      7.944533   8.170410  \n",
+       "16998      7.920227   8.132035  \n",
+       "16999      7.270083   6.949396  \n",
+       "\n",
+       "[17000 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Coordenadas de los puntos conocidos escuela y hospital\n",
+    "escuela = (-118, 37)  # Coordenadas de escuela\n",
+    "hospital = (-122, 34)  # Coordenadas de hospital\n",
+    "\n",
+    "# Función para calcular la distancia euclidiana\n",
+    "def euclidean_distance(point, ref_point):\n",
+    "    return np.sqrt((point[0] - ref_point[0])**2 + (point[1] - ref_point[1])**2)\n",
+    "\n",
+    "# Aplicar la distancia de cada punto a la escuela\n",
+    "df['dist_escuela'] = df.apply(lambda row: euclidean_distance((row['longitude'], row['latitude']), escuela), axis=1)\n",
+    "\n",
+    "# Aplicar la distancia de cada punto al hospital\n",
+    "df['dist_hosp'] = df.apply(lambda row: euclidean_distance((row['longitude'], row['latitude']), hospital), axis=1)\n",
+    "\n",
+    "df\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "casas_cerca=df[(df[\"dist_escuela\"]<=0.5) | (df[\"dist_hosp\"]<=0.5)]\n",
+    "#casas_cerca=casas_cerca[\"median_house_value\"]\n",
+    "\n",
+    "casas_lejos=df[(df[\"dist_escuela\"]>0.5) | (df[\"dist_hosp\"]>0.5)]\n",
+    "#casas_lejos=casas_lejos[\"median_house_value\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Planteamiento de hipótesis:\n",
+    "#H0: precio de casas cerca es <= Precio de casas lejos\n",
+    "#H1: precio de casas cerca es > Precio de casas lejos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=-17.169161722319306, pvalue=0.9999738667251178, df=4.14533887142248)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.ttest_ind(casas_cerca[\"median_house_value\"],casas_lejos[\"median_house_value\"], equal_var=False,alternative='greater')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Con un p-valor tan alto (cerca de 1), podemos no rechazar la hipótesis nula. \n",
+    "Esto sugiere que, en términos estadísticos, no hay evidencia suficiente para afirmar que el valor medio de las casas \n",
+    "cercanas a la escuela es mayor que el valor medio de las casas lejanas a la escuela.\"\"\""
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "p2_en",
    "language": "python",
    "name": "python3"
   },
@@ -512,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
